--- a/po/en_GB.po
+++ b/po/en_GB.po
@@ -2537,7 +2537,7 @@ msgstr ""
 
 #: libraries/engines/pbms.lib.php:46
 msgid "Temp Blob Timeout"
-msgstr ""
+msgstr "Temp Blob Timeout"
 
 #: libraries/engines/pbms.lib.php:47
 msgid ""
