--- a/po/en_GB.po
+++ b/po/en_GB.po
@@ -2564,7 +2564,7 @@ msgstr ""
 
 #: libraries/engines/pbms.lib.php:56
 msgid "Max Keep Alive"
-msgstr ""
+msgstr "Max Keep Alive"
 
 #: libraries/engines/pbms.lib.php:57
 msgid ""
