--- a/po/en_GB.po
+++ b/po/en_GB.po
@@ -2571,6 +2571,9 @@ msgid ""
 "The timeout for inactive connection with the keep-alive flag set. After this "
 "time the connection will be closed. The time-out is in milliseconds (1/1000)."
 msgstr ""
+"The timeout for inactive connection with the keep-alive flag set. After this "
+"time the connection will be closed. The time-out is in milliseconds "
+"(1/1000)."
 
 #: libraries/engines/pbms.lib.php:61
 msgid "Metadata Headers"
