--- a/po/en_GB.po
+++ b/po/en_GB.po
@@ -2584,6 +2584,8 @@ msgid ""
 "A \":\" delimited list of metadata headers to be used to initialize the "
 "pbms_metadata_header table when a database is created."
 msgstr ""
+"A \":\" delimited list of metadata headers to be used to initialize the "
+"pbms_metadata_header table when a database is created."
 
 #: libraries/engines/pbxt.lib.php:22
 msgid "Index cache size"
