--- a/po/en_GB.po
+++ b/po/en_GB.po
@@ -8041,7 +8041,7 @@ msgstr "Delete data or table"
 
 #: tbl_operations.php:657
 msgid "Empty the table (TRUNCATE)"
-msgstr ""
+msgstr "Empty the table (TRUNCATE)"
 
 #: tbl_operations.php:675
 #, fuzzy
