--- a/po/en_GB.po
+++ b/po/en_GB.po
@@ -8044,10 +8044,9 @@ msgid "Empty the table (TRUNCATE)"
 msgstr "Empty the table (TRUNCATE)"
 
 #: tbl_operations.php:675
-#, fuzzy
 #| msgid "Go to database"
 msgid "Delete the table (DROP)"
-msgstr "Go to database"
+msgstr "Delete the table (DROP)"
 
 #: tbl_operations.php:696
 msgid "Partition maintenance"
