--- a/po/cs.po
+++ b/po/cs.po
@@ -5,7 +5,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
-"POT-Creation-Date: 2010-07-28 05:45-0400\n"
+"POT-Creation-Date: 2010-07-31 14:12-0400\n"
 "PO-Revision-Date: 2010-07-28 17:55+0200\n"
 "Last-Translator: Michal <michal@cihar.com>\n"
 "Language-Team: czech <cs@li.org>\n"
@@ -92,6 +92,7 @@ msgid "Use this value"
 msgstr "Použít tuto hodnotu"
 
 #: bs_disp_as_mime_type.php:29 bs_play_media.php:35
+#: libraries/blobstreaming.lib.php:362
 msgid "No blob streaming server configured!"
 msgstr "Není nastaven žádný streamovací server!"
 
@@ -606,8 +607,8 @@ msgstr "Sledování není zapnuté."
 #: db_structure.php:405 libraries/display_tbl.lib.php:1902
 #, php-format
 msgid ""
-"This view has at least this number of rows. Please refer to %sdocumentation"
-"%s."
+"This view has at least this number of rows. Please refer to %sdocumentation%"
+"s."
 msgstr ""
 "Tento pohled má alespoň tolik řádek. Podrobnosti naleznete v %sdokumentaci%s."
 
@@ -804,8 +805,8 @@ msgstr "Výpis byl uložen do souboru %s."
 #: import.php:58
 #, php-format
 msgid ""
-"You probably tried to upload too large file. Please refer to %sdocumentation"
-"%s for ways to workaround this limit."
+"You probably tried to upload too large file. Please refer to %sdocumentation%"
+"s for ways to workaround this limit."
 msgstr ""
 "Pravděpodobně jste se pokusili nahrát příliš velký soubor. Přečtěte si "
 "prosím %sdokumentaci%s, jak toto omezení obejít."
@@ -1358,7 +1359,8 @@ msgstr ""
 msgid "Databases"
 msgstr "Databáze"
 
-#: libraries/Message.class.php:210 libraries/common.lib.php:574
+#: libraries/Message.class.php:210 libraries/blobstreaming.lib.php:339
+#: libraries/blobstreaming.lib.php:345 libraries/common.lib.php:574
 #: libraries/core.lib.php:232 libraries/import.lib.php:134 pdf_schema.php:30
 #: pdf_schema.php:230 tbl_change.php:921 tbl_operations.php:210
 #: tbl_relation.php:287 view_operations.php:60
@@ -1474,8 +1476,8 @@ msgstr "Vítejte v %s"
 #: libraries/auth/config.auth.lib.php:106
 #, php-format
 msgid ""
-"You probably did not create a configuration file. You might want to use the "
-"%1$ssetup script%2$s to create one."
+"You probably did not create a configuration file. You might want to use the %"
+"1$ssetup script%2$s to create one."
 msgstr ""
 "Pravděpodobná příčina je, že nemáte vytvořený konfigurační soubor. Pro jeho "
 "vytvoření by se vám mohl hodit %1$snastavovací skript%2$s."
@@ -1570,21 +1572,44 @@ msgstr "Nebyl připojen autentizační klíč"
 msgid "Authenticating..."
 msgstr "Authentizuji..."
 
-#: libraries/blobstreaming.lib.php:340
+#: libraries/blobstreaming.lib.php:272
+msgid "PBMS error"
+msgstr ""
+
+#: libraries/blobstreaming.lib.php:298
+#, fuzzy
+#| msgid "Page creation failed"
+msgid "PBMS connection failed:"
+msgstr "Vytvoření stránky selhalo"
+
+#: libraries/blobstreaming.lib.php:343
+msgid "PBMS get BLOB info failed:"
+msgstr ""
+
+#: libraries/blobstreaming.lib.php:351
+msgid "get BLOB Content-Type failed"
+msgstr ""
+
+#: libraries/blobstreaming.lib.php:377
 msgid "View image"
 msgstr "Zobrazit obrázek"
 
-#: libraries/blobstreaming.lib.php:344
+#: libraries/blobstreaming.lib.php:381
 msgid "Play audio"
 msgstr "Přehrát zvuk"
 
-#: libraries/blobstreaming.lib.php:349
+#: libraries/blobstreaming.lib.php:386
 msgid "View video"
 msgstr "Přehrát video"
 
-#: libraries/blobstreaming.lib.php:353
+#: libraries/blobstreaming.lib.php:390
 msgid "Download file"
 msgstr "Stáhnout soubor"
+
+#: libraries/blobstreaming.lib.php:451
+#, php-format
+msgid "Could not open file: %s"
+msgstr ""
 
 #: libraries/common.inc.php:567
 msgid ""
@@ -2007,8 +2032,8 @@ msgstr "jméno tabulky"
 #, php-format
 msgid ""
 "This value is interpreted using %1$sstrftime%2$s, so you can use time "
-"formatting strings. Additionally the following transformations will happen: "
-"%3$s. Other text will be kept as is."
+"formatting strings. Additionally the following transformations will happen: %"
+"3$s. Other text will be kept as is."
 msgstr ""
 "Tato hodnota je interpretována pomocí %1$sstrftime%2$s, takže můžete použít "
 "libovolné řetězce pro formátování data a času. Dále budou provedena "
@@ -3232,7 +3257,7 @@ msgstr "Index"
 msgid "Fulltext"
 msgstr "Fulltext"
 
-#: libraries/mult_submits.inc.php:433 tbl_replace.php:330
+#: libraries/mult_submits.inc.php:433 tbl_replace.php:326
 msgid "No change"
 msgstr "Žádná změna"
 
@@ -3840,8 +3865,8 @@ msgid ""
 "For a list of available transformation options and their MIME type "
 "transformations, click on %stransformation descriptions%s"
 msgstr ""
-"Pro seznam dostupných parametrů transformací a jejich MIME typů klikněte na "
-"%spopisy transformací%s"
+"Pro seznam dostupných parametrů transformací a jejich MIME typů klikněte na %"
+"spopisy transformací%s"
 
 #: libraries/tbl_properties.inc.php:143
 msgid "Transformation options"
@@ -3874,8 +3899,8 @@ msgid ""
 "No description is available for this transformation.<br />Please ask the "
 "author what %s does."
 msgstr ""
-"Pro tuto transformaci není dostupný žádný popis.<br />Zeptejte se autora co "
-"%s dělá."
+"Pro tuto transformaci není dostupný žádný popis.<br />Zeptejte se autora co %"
+"s dělá."
 
 #: libraries/tbl_properties.inc.php:724 server_engines.php:56
 #: tbl_operations.php:352
@@ -4845,8 +4870,8 @@ msgstr "Odstranit databáze se stejnými jmény jako uživatelé."
 msgid ""
 "Note: phpMyAdmin gets the users' privileges directly from MySQL's privilege "
 "tables. The content of these tables may differ from the privileges the "
-"server uses, if they have been changed manually. In this case, you should "
-"%sreload the privileges%s before you continue."
+"server uses, if they have been changed manually. In this case, you should %"
+"sreload the privileges%s before you continue."
 msgstr ""
 "Poznámka: phpMyAdmin získává oprávnění přímo z tabulek MySQL. Obsah těchto "
 "tabulek se může lišit od oprávnění, která server právě používá, pokud byly "
@@ -7108,9 +7133,8 @@ msgstr ""
 "Nastavil jste typ autentizace [kbd]config[/kbd] a zadal jste uživatelské "
 "jméno a heslo pro automatické přihlášení, což není doporučená volba pro "
 "produkční servery. Kdokoli kdo zná URL phpMyAdminu může přímo přistoupit k "
-"Vašemu phpMyAdmin panelu. Nastavte [a@?page=servers&amp;mode=edit&amp;id="
-"%1$d#tab_Server]typ autentizace[/a] na [kbd]cookie[/kbd] nebo [kbd]http[/"
-"kbd]."
+"Vašemu phpMyAdmin panelu. Nastavte [a@?page=servers&amp;mode=edit&amp;id=%1"
+"$d#tab_Server]typ autentizace[/a] na [kbd]cookie[/kbd] nebo [kbd]http[/kbd]."
 
 #: setup/lib/messages.inc.php:236
 msgid "You should use mysqli for performance reasons"
@@ -7806,7 +7830,7 @@ msgstr ""
 msgid "ZIP"
 msgstr "ZIP"
 
-#: sql.php:494 tbl_replace.php:384
+#: sql.php:494 tbl_replace.php:380
 #, php-format
 msgid "Inserted row id: %1$d"
 msgstr "ID vloženého řádku: %1$d"
@@ -7815,7 +7839,7 @@ msgstr "ID vloženého řádku: %1$d"
 msgid "Showing as PHP code"
 msgstr "Zobrazuji jako PHP kód"
 
-#: sql.php:514 tbl_replace.php:358
+#: sql.php:514 tbl_replace.php:354
 msgid "Showing SQL query"
 msgstr "Zobrazuji SQL dotaz"
 
@@ -8030,7 +8054,6 @@ msgid "Flush the table (FLUSH)"
 msgstr "Vyprázdnit vyrovnávací paměť pro tabulku („FLUSH“)"
 
 #: tbl_operations.php:642
-#| msgid "Delete tracking data for this table"
 msgid "Delete data or table"
 msgstr "Odstranit data nebo tabulku"
 
@@ -8039,7 +8062,6 @@ msgid "Empty the table (TRUNCATE)"
 msgstr "Vyprázdnit tabulku (TRUNCATE)"
 
 #: tbl_operations.php:675
-#| msgid "Drop the table (DROP)"
 msgid "Delete the table (DROP)"
 msgstr "Odstranit tabulku (DROP)"
 
