Translation update done using Pootle.

--- a/po/tr.po
+++ b/po/tr.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-07-28 05:45-0400\n"
-"PO-Revision-Date: 2010-07-31 20:08+0200\n"
+"PO-Revision-Date: 2010-07-31 20:16+0200\n"
 "Last-Translator: Burak Yavuz <hitowerdigit@hotmail.com>\n"
 "Language-Team: turkish <tr@li.org>\n"
 "Language: tr\n"
@@ -2539,6 +2539,8 @@ msgid ""
 "The port for the PBMS stream-based communications. Setting this value to 0 "
 "will disable HTTP communication with the daemon."
 msgstr ""
+"PBMS akış tabanlı iletişimler için bağlatı noktasıdır. Bu değeri 0'a "
+"ayarlamak, sunucu programı ile HTTP iletişimini etkisizleştirecektir."
 
 #: libraries/engines/pbms.lib.php:41
 msgid "Repository Threshold"
