--- a/po/tr.po
+++ b/po/tr.po
@@ -2544,7 +2544,7 @@ msgstr ""
 
 #: libraries/engines/pbms.lib.php:41
 msgid "Repository Threshold"
-msgstr ""
+msgstr "Depolama Eşiği"
 
 #: libraries/engines/pbms.lib.php:42
 msgid ""
