--- a/po/tr.po
+++ b/po/tr.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-07-28 05:45-0400\n"
-"PO-Revision-Date: 2010-07-31 20:16+0200\n"
+"PO-Revision-Date: 2010-07-31 20:19+0200\n"
 "Last-Translator: Burak Yavuz <hitowerdigit@hotmail.com>\n"
 "Language-Team: turkish <tr@li.org>\n"
 "Language: tr\n"
@@ -2552,6 +2552,9 @@ msgid ""
 "indicate the unit of the value. A value in bytes is assumed when no unit is "
 "specified."
 msgstr ""
+"BLOB depolama dosyasının en fazla boyutudur. Değerin birimini belirtmek için "
+"Kb, MB veya GB kullanabilirsiniz. Birim belirtilmediğinde değer bayt "
+"farzedilir."
 
 #: libraries/engines/pbms.lib.php:46
 msgid "Temp Blob Timeout"
