Translation update done using Pootle.

--- a/po/tr.po
+++ b/po/tr.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-07-28 05:45-0400\n"
-"PO-Revision-Date: 2010-07-31 20:20+0200\n"
+"PO-Revision-Date: 2010-07-31 20:24+0200\n"
 "Last-Translator: Burak Yavuz <hitowerdigit@hotmail.com>\n"
 "Language-Team: turkish <tr@li.org>\n"
 "Language: tr\n"
@@ -2565,6 +2565,9 @@ msgid ""
 "The timeout, in seconds, for temporary BLOBs. Uploaded BLOB data is removed "
 "after this time, unless they are referenced by a record in the database."
 msgstr ""
+"Geçici BLOB'lar için zaman aşımı süresi saniyedir. Gönderilmiş BLOB verisi "
+"veritabanındaki kayıt tarafından kaynak gösterilmedikçe bu süreden sonra "
+"silinir."
 
 #: libraries/engines/pbms.lib.php:51
 #, fuzzy
