Translation update done using Pootle.

--- a/po/tr.po
+++ b/po/tr.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-07-28 05:45-0400\n"
-"PO-Revision-Date: 2010-07-31 20:25+0200\n"
+"PO-Revision-Date: 2010-07-31 20:29+0200\n"
 "Last-Translator: Burak Yavuz <hitowerdigit@hotmail.com>\n"
 "Language-Team: turkish <tr@li.org>\n"
 "Language: tr\n"
@@ -2593,6 +2593,9 @@ msgid ""
 "The timeout for inactive connection with the keep-alive flag set. After this "
 "time the connection will be closed. The time-out is in milliseconds (1/1000)."
 msgstr ""
+"Pasif bağlantıyı canlı tutma işareti ayarı için zaman aşımı süresidir. Bu "
+"süreden sonra bağlantı kapanacaktır. Zaman aşımı süresi milisaniyedir "
+"(1/1000)."
 
 #: libraries/engines/pbms.lib.php:61
 msgid "Metadata Headers"
