--- a/po/tr.po
+++ b/po/tr.po
@@ -2651,7 +2651,7 @@ msgstr ""
 
 #: libraries/engines/pbxt.lib.php:37
 msgid "Log file threshold"
-msgstr "Günlük dosyası başı"
+msgstr "Günlük dosyası eşiği"
 
 #: libraries/engines/pbxt.lib.php:38
 msgid ""
