Translation update done using Pootle.

--- a/po/tr.po
+++ b/po/tr.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-07-28 05:45-0400\n"
-"PO-Revision-Date: 2010-07-31 20:37+0200\n"
+"PO-Revision-Date: 2010-07-31 20:38+0200\n"
 "Last-Translator: Burak Yavuz <hitowerdigit@hotmail.com>\n"
 "Language-Team: turkish <tr@li.org>\n"
 "Language: tr\n"
@@ -2710,7 +2710,7 @@ msgid ""
 "The percentage of garbage in a data log file before it is compacted. This is "
 "a value between 1 and 99. The default is 50."
 msgstr ""
-"Küçültülmeden önce veri günlük dosyasındaki artık yüzdesi. Bu 1 ile 99 "
+"Ufaltılmadan önce veri günlük dosyasındaki artık yüzdesidir. Bu 1 ile 99 "
 "arasında bir değerdir. Varsayılan değer 50'dir."
 
 #: libraries/engines/pbxt.lib.php:62
