--- a/po/tr.po
+++ b/po/tr.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-07-28 05:45-0400\n"
-"PO-Revision-Date: 2010-07-31 20:38+0200\n"
+"PO-Revision-Date: 2010-07-31 20:39+0200\n"
 "Last-Translator: Burak Yavuz <hitowerdigit@hotmail.com>\n"
 "Language-Team: turkish <tr@li.org>\n"
 "Language: tr\n"
@@ -8122,7 +8122,7 @@ msgstr "Tabloyu temizle (FLUSH)"
 #: tbl_operations.php:642
 #| msgid "Delete tracking data for this table"
 msgid "Delete data or table"
-msgstr "Tabloyu veya veryi sil"
+msgstr "Tabloyu veya veriyi sil"
 
 #: tbl_operations.php:657
 msgid "Empty the table (TRUNCATE)"
