--- a/po/tr.po
+++ b/po/tr.po
@@ -96,7 +96,7 @@ msgstr "Yapılandırılmış blob akış sunucusu yok!"
 #: bs_disp_as_mime_type.php:35
 #| msgid "Failed to write file to disk."
 msgid "Failed to fetch headers"
-msgstr "Üstbilgilerin alınması başarısız oldu"
+msgstr "Üstbilgileri getirme başarısız oldu"
 
 #: bs_disp_as_mime_type.php:41
 msgid "Failed to open remote URL"
