--- a/po/tr.po
+++ b/po/tr.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-07-28 05:45-0400\n"
-"PO-Revision-Date: 2010-07-31 20:47+0200\n"
+"PO-Revision-Date: 2010-07-31 20:48+0200\n"
 "Last-Translator: Burak Yavuz <hitowerdigit@hotmail.com>\n"
 "Language-Team: turkish <tr@li.org>\n"
 "Language: tr\n"
@@ -96,7 +96,7 @@ msgstr "Yapılandırılmış blob akış sunucusu yok!"
 #: bs_disp_as_mime_type.php:35
 #| msgid "Failed to write file to disk."
 msgid "Failed to fetch headers"
-msgstr "Üstbilgileri getirme başarısız oldu"
+msgstr "Üstbilgileri getirmek başarısız oldu"
 
 #: bs_disp_as_mime_type.php:41
 msgid "Failed to open remote URL"
