--- a/po/tr.po
+++ b/po/tr.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-07-28 05:45-0400\n"
-"PO-Revision-Date: 2010-07-31 20:53+0200\n"
+"PO-Revision-Date: 2010-07-31 20:54+0200\n"
 "Last-Translator: Burak Yavuz <hitowerdigit@hotmail.com>\n"
 "Language-Team: turkish <tr@li.org>\n"
 "Language: tr\n"
@@ -6684,7 +6684,6 @@ msgid "Signon login options"
 msgstr "Oturum açma seçenekleri"
 
 #: setup/lib/messages.inc.php:128
-#, fuzzy
 #| msgid ""
 #| "Configure phpMyAdmin database to gain access to additional features, see "
 #| "[a@../Documentation.html#linked-tables]linked-tables infrastructure[/a] "
@@ -6695,8 +6694,8 @@ msgid ""
 "in documentation"
 msgstr ""
 "İlave özelliklere erişim kazanmak için phpMyAdmin veritabanını yapılandırır, "
-"belgelerde [a@../Documentation.html#linked-tables]bağlantılı tablolar "
-"altyapısına[/a] bakın"
+"belgelerde [a@../Documentation.html#linked-tables]phpMyAdmin yapılandırma "
+"depolama[/a] kısmına bakın"
 
 #: setup/lib/messages.inc.php:129 setup/lib/messages.inc.php:290
 msgid "PMA database"
