--- a/po/de.po
+++ b/po/de.po
@@ -4,13 +4,13 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-07-28 05:45-0400\n"
-"PO-Revision-Date: 2010-07-21 14:45+0200\n"
+"PO-Revision-Date: 2010-07-31 21:09+0200\n"
 "Last-Translator: Marc Delisle <marc@infomarc.info>\n"
 "Language-Team: german <de@li.org>\n"
+"Language: de\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Language: de\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
 "X-Generator: Pootle 2.0.1\n"
 
@@ -3122,7 +3122,7 @@ msgstr "Erstellt von"
 #: libraries/import.lib.php:151 sql.php:518 tbl_change.php:175
 #: tbl_get_field.php:34
 msgid "MySQL returned an empty result set (i.e. zero rows)."
-msgstr "MySQL lieferte ein leeres Resultat zurück (d.&nbsp;h. null Zeilen)."
+msgstr "MySQL lieferte ein leeres Resultat zurück (d.h. null Zeilen)."
 
 #: libraries/import.lib.php:1110
 msgid ""
@@ -8678,68 +8678,3 @@ msgstr "VIEW Name"
 #: view_operations.php:91
 msgid "Rename view to"
 msgstr "View umbenennen in"
-
-#, fuzzy
-#~| msgid "Table name"
-#~ msgid "Table removal"
-#~ msgstr "Tabellenname"
-
-#~ msgid "BLOB Repository"
-#~ msgstr "BLOB-Repository"
-
-#~ msgctxt "BLOB repository"
-#~ msgid "Enabled"
-#~ msgstr "Aktiviert"
-
-#~ msgid "Disable"
-#~ msgstr "Deaktivieren"
-
-#~ msgid "Damaged"
-#~ msgstr "Beschädigt"
-
-#~ msgctxt "BLOB repository"
-#~ msgid "Repair"
-#~ msgstr "Reparieren"
-
-#~ msgctxt "BLOB repository"
-#~ msgid "Disabled"
-#~ msgstr "Deaktiviert"
-
-#~ msgid "Enable"
-#~ msgstr "Aktivieren"
-
-#~ msgid ""
-#~ "Cannot load [a@http://php.net/%1$s@Documentation][em]%1$s[/em][/a] "
-#~ "extension. Please check your PHP configuration."
-#~ msgstr ""
-#~ "Die Erweiterung [a@http://php.net/%1$s@Documentation][em]%1$s[/em][/a] "
-#~ "kann nicht geladen werden. Bitte überprüfen Sie Ihre PHP-Konfiguration."
-
-#~ msgid ""
-#~ "Couldn't load the iconv or recode extension needed for charset "
-#~ "conversion. Either configure PHP to enable these extensions or disable "
-#~ "charset conversion in phpMyAdmin."
-#~ msgstr ""
-#~ "Die PHP-Erweiterungen iconv und recode, welche für die "
-#~ "Zeichensatzkonvertierung benötigt werden, konnten nicht geladen werden. "
-#~ "Bitte ändern Sie Ihre PHP-Konfiguration und aktivieren Sie diese "
-#~ "Erweiterungen oder deaktivieren Sie die Zeichensatzkonvertierung in "
-#~ "phpMyAdmin."
-
-#~ msgid ""
-#~ "Couldn't use the iconv, libiconv, or recode_string functions, although "
-#~ "the necessary extensions appear to be loaded. Check your PHP "
-#~ "configuration."
-#~ msgstr ""
-#~ "Weder die iconv- noch libiconv- oder recode_string-Funktion konnte "
-#~ "verwandt werden, obwohl die benötigten php-Erweiterungen angeblich "
-#~ "geladen wurden. Bitte überprüfen Sie Ihre PHP-Konfiguration."
-
-#~ msgid "Allow character set conversion"
-#~ msgstr "Zeichensatzkonvertierung erlauben."
-
-#~ msgid "Default character set used for conversions"
-#~ msgstr "Standardzeichensatz bei Konvertierung"
-
-#~ msgid "Default character set"
-#~ msgstr "Standardzeichensatz"
