patch #3038312 [export] JSON export

--- a/ChangeLog
+++ b/ChangeLog
@@ -102,6 +102,8 @@ $Id$
 - [interface] Fixed rendering of error/notice/info titles background.
 - patch #3038293 [doc] Language and grammar fixes,
   thanks to Isaac Bennetch - ibennetch
+- patch #3038312 [export] JSON export, 
+  thanks to Hauke Henningsen - blubberkeks152
 
 3.3.6.0 (not yet released)
 - bug #3033063 [core] Navi gets wrong db name
