--- a/po/fr.po
+++ b/po/fr.po
@@ -4,15 +4,15 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-07-31 14:12-0400\n"
-"PO-Revision-Date: 2010-07-21 14:41+0200\n"
+"PO-Revision-Date: 2010-08-06 14:06+0200\n"
 "Last-Translator: Marc Delisle <marc@infomarc.info>\n"
 "Language-Team: french <fr@li.org>\n"
+"Language: fr\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Language: fr\n"
 "Plural-Forms: nplurals=2; plural=(n > 1);\n"
-"X-Generator: Pootle 2.0.1\n"
+"X-Generator: Pootle 2.0.5\n"
 
 #: browse_foreigners.php:36 browse_foreigners.php:57
 #: libraries/display_tbl.lib.php:415 server_privileges.php:1510
@@ -92,7 +92,7 @@ msgstr "Utiliser cette valeur"
 #: bs_disp_as_mime_type.php:29 bs_play_media.php:35
 #: libraries/blobstreaming.lib.php:362
 msgid "No blob streaming server configured!"
-msgstr ""
+msgstr "Aucun serveur blob streaming configuré!"
 
 #: bs_disp_as_mime_type.php:35
 #, fuzzy
@@ -8553,67 +8553,3 @@ msgstr "Nom de la vue"
 #: view_operations.php:91
 msgid "Rename view to"
 msgstr "Changer le nom de la vue pour"
-
-#, fuzzy
-#~| msgid "Table name"
-#~ msgid "Table removal"
-#~ msgstr "Nom de la table"
-
-#~ msgid "BLOB Repository"
-#~ msgstr "Dépôt BLOB"
-
-#~ msgctxt "BLOB repository"
-#~ msgid "Enabled"
-#~ msgstr "Activé"
-
-#~ msgid "Disable"
-#~ msgstr "Désactiver"
-
-#~ msgid "Damaged"
-#~ msgstr "Endommagé"
-
-#~ msgctxt "BLOB repository"
-#~ msgid "Repair"
-#~ msgstr "Réparer"
-
-#~ msgctxt "BLOB repository"
-#~ msgid "Disabled"
-#~ msgstr "Désactivé"
-
-#~ msgid "Enable"
-#~ msgstr "Activer"
-
-#~ msgid ""
-#~ "Cannot load [a@http://php.net/%1$s@Documentation][em]%1$s[/em][/a] "
-#~ "extension. Please check your PHP configuration."
-#~ msgstr ""
-#~ "PHP ne peut charger l'extension [a@http://php.net/%1$s@Documentation][em]%"
-#~ "1$s[/em][/a]. Veuillez vérifier votre configuration de PHP."
-
-#~ msgid ""
-#~ "Couldn't load the iconv or recode extension needed for charset "
-#~ "conversion. Either configure PHP to enable these extensions or disable "
-#~ "charset conversion in phpMyAdmin."
-#~ msgstr ""
-#~ "Erreur lors du chargement de l'extension iconv ou recode, utilisée pour "
-#~ "convertir le jeu de caractères. Veuillez activer l'une de ces extensions "
-#~ "dans PHP, ou désactiver la conversion des jeux de caractères dans "
-#~ "phpMyAdmin."
-
-#~ msgid ""
-#~ "Couldn't use the iconv, libiconv, or recode_string functions, although "
-#~ "the necessary extensions appear to be loaded. Check your PHP "
-#~ "configuration."
-#~ msgstr ""
-#~ "Erreur lors de l'utilisation de iconv, libiconv et recode_string, alors "
-#~ "que ces extensions semblent chargées. Veuillez vérifier votre "
-#~ "configuration de PHP."
-
-#~ msgid "Allow character set conversion"
-#~ msgstr "Active la conversion des caractères"
-
-#~ msgid "Default character set used for conversions"
-#~ msgstr "Utilisé pour les conversions"
-
-#~ msgid "Default character set"
-#~ msgstr "Jeu de caractères par défaut"
