--- a/po/fr.po
+++ b/po/fr.po
@@ -101,7 +101,7 @@ msgstr "Erreur d'accès aux en-têtes"
 
 #: bs_disp_as_mime_type.php:41
 msgid "Failed to open remote URL"
-msgstr ""
+msgstr "Échec d'ouverture du URL distant"
 
 #: db_create.php:44
 #, php-format
