--- a/po/fr.po
+++ b/po/fr.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-07-31 14:12-0400\n"
-"PO-Revision-Date: 2010-08-06 14:07+0200\n"
+"PO-Revision-Date: 2010-08-06 14:08+0200\n"
 "Last-Translator: Marc Delisle <marc@infomarc.info>\n"
 "Language-Team: french <fr@li.org>\n"
 "Language: fr\n"
@@ -259,10 +259,9 @@ msgid "Database %s has been dropped."
 msgstr "La base de données %s a été effacée."
 
 #: db_operations.php:396
-#, fuzzy
 #| msgid "Go to database"
 msgid "Drop the database (DROP)"
-msgstr "Aller à la base de données"
+msgstr "Supprimer la base de données (DROP)"
 
 #: db_operations.php:424
 msgid "Copy database to"
