--- a/po/fr.po
+++ b/po/fr.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-07-31 14:12-0400\n"
-"PO-Revision-Date: 2010-08-06 14:08+0200\n"
+"PO-Revision-Date: 2010-08-06 14:09+0200\n"
 "Last-Translator: Marc Delisle <marc@infomarc.info>\n"
 "Language-Team: french <fr@li.org>\n"
 "Language: fr\n"
@@ -313,7 +313,7 @@ msgid "Collation"
 msgstr "Interclassement"
 
 #: db_operations.php:498 pdf_schema.php:32
-#, fuzzy, php-format
+#, php-format
 #| msgid ""
 #| "The additional features for working with linked tables have been "
 #| "deactivated. To find out why click %shere%s."
@@ -321,8 +321,8 @@ msgid ""
 "The phpMyAdmin configuration storage has been deactivated. To find out why "
 "click %shere%s."
 msgstr ""
-"Certaines fonctionnalités ayant trait aux tables reliées sont désactivées. "
-"Pour une analyse du problème, cliquez %sici%s."
+"Le stockage des configurations phpMyAdmin a été désactivé. Pour une analyse "
+"du problème, cliquez %sici%s."
 
 #: db_operations.php:531
 msgid "Edit PDF Pages"
