--- a/po/fr.po
+++ b/po/fr.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-07-31 14:12-0400\n"
-"PO-Revision-Date: 2010-08-06 14:09+0200\n"
+"PO-Revision-Date: 2010-08-06 14:10+0200\n"
 "Last-Translator: Marc Delisle <marc@infomarc.info>\n"
 "Language-Team: french <fr@li.org>\n"
 "Language: fr\n"
@@ -1596,7 +1596,7 @@ msgstr "La connexion PBMS a échoué :"
 
 #: libraries/blobstreaming.lib.php:343
 msgid "PBMS get BLOB info failed:"
-msgstr ""
+msgstr "L'accès aux informations BLOB de PBMS a échoué :"
 
 #: libraries/blobstreaming.lib.php:351
 msgid "get BLOB Content-Type failed"
