--- a/po/fr.po
+++ b/po/fr.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-07-31 14:12-0400\n"
-"PO-Revision-Date: 2010-08-06 14:10+0200\n"
+"PO-Revision-Date: 2010-08-06 14:11+0200\n"
 "Last-Translator: Marc Delisle <marc@infomarc.info>\n"
 "Language-Team: french <fr@li.org>\n"
 "Language: fr\n"
@@ -1621,7 +1621,7 @@ msgstr "Télécharger"
 #: libraries/blobstreaming.lib.php:451
 #, php-format
 msgid "Could not open file: %s"
-msgstr ""
+msgstr "Échec d'ouverture du fichier %s"
 
 #: libraries/common.inc.php:567
 msgid ""
