--- a/po/fr.po
+++ b/po/fr.po
@@ -2579,7 +2579,7 @@ msgstr ""
 
 #: libraries/engines/pbms.lib.php:41
 msgid "Repository Threshold"
-msgstr ""
+msgstr "Seuil du dépôt"
 
 #: libraries/engines/pbms.lib.php:42
 msgid ""
