--- a/po/fr.po
+++ b/po/fr.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-07-31 14:12-0400\n"
-"PO-Revision-Date: 2010-08-06 14:13+0200\n"
+"PO-Revision-Date: 2010-08-06 14:15+0200\n"
 "Last-Translator: Marc Delisle <marc@infomarc.info>\n"
 "Language-Team: french <fr@li.org>\n"
 "Language: fr\n"
@@ -2587,6 +2587,9 @@ msgid ""
 "indicate the unit of the value. A value in bytes is assumed when no unit is "
 "specified."
 msgstr ""
+"La taille maximale d'un fichier de dépôt BLOB. Vous pouvez utiliser Kb, MB "
+"ou GB pour indiquer l'unité de la valeur. Une valeur en octets est assumée "
+"si aucune unité n'est spécifiée."
 
 #: libraries/engines/pbms.lib.php:46
 msgid "Temp Blob Timeout"
