--- a/po/tr.po
+++ b/po/tr.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-07-31 14:12-0400\n"
-"PO-Revision-Date: 2010-08-07 22:23+0200\n"
+"PO-Revision-Date: 2010-08-07 22:24+0200\n"
 "Last-Translator: Burak Yavuz <hitowerdigit@hotmail.com>\n"
 "Language-Team: turkish <tr@li.org>\n"
 "Language: tr\n"
@@ -865,8 +865,8 @@ msgid ""
 "Script timeout passed, if you want to finish import, please resubmit same "
 "file and import will resume."
 msgstr ""
-"Küçük program zaman aşımı geçti, eğer içeri aktarmayı bitirmek istiyorsanız, "
-"lütfen aynı dosyayı yeniden gönderin ve içeri aktarma devam edecektir."
+"Betik zaman aşımı geçti, eğer içe aktarmayı bitirmek istiyorsanız, lütfen "
+"aynı dosyayı yeniden gönderin ve içe aktarma devam edecektir."
 
 #: import.php:424
 msgid ""
