--- a/po/tr.po
+++ b/po/tr.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-07-31 14:12-0400\n"
-"PO-Revision-Date: 2010-08-07 22:26+0200\n"
+"PO-Revision-Date: 2010-08-07 22:27+0200\n"
 "Last-Translator: Burak Yavuz <hitowerdigit@hotmail.com>\n"
 "Language-Team: turkish <tr@li.org>\n"
 "Language: tr\n"
@@ -2149,9 +2149,9 @@ msgid ""
 "to the PHP timeout limit. This might be good way to import large files, "
 "however it can break transactions."
 msgstr ""
-"Küçük programcığın PHP zaman aşımı sınırına yaklaşıldığını algılaması "
-"durumunda içeri aktarımı kesmeye izin ver. Bu büyük dosyaların içeri "
-"aktarımı için iyi bir yol olabilir, ancak hareketleri kesebilir."
+"Betiğin PHP zaman aşımı sınırına yaklaşıldığını algılaması durumunda içe "
+"aktarımı kesmeye izin ver. Bu büyük dosyaların içe aktarımı için iyi bir yol "
+"olabilir, ancak hareketleri kesebilir."
 
 #: libraries/display_import.lib.php:238 setup/lib/messages.inc.php:158
 msgid "Number of queries to skip from start"
