--- a/po/tr.po
+++ b/po/tr.po
@@ -6329,8 +6329,8 @@ msgid ""
 "Enable [a@http://en.wikipedia.org/wiki/Bzip2]bzip2[/a] compression for "
 "import and export operations"
 msgstr ""
-"İçeri ve dışarı aktarma işlemleri için [a@http://en.wikipedia.org/wiki/Bzip2]"
-"bzip2[/a] sıkıştırma etkin"
+"İçe ve dışa aktarma işlemleri için "
+"[a@http://en.wikipedia.org/wiki/Bzip2]bzip2[/a] sıkıştırma etkin"
 
 #: setup/lib/messages.inc.php:30
 msgid "Bzip2"
