--- a/po/tr.po
+++ b/po/tr.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-07-31 14:12-0400\n"
-"PO-Revision-Date: 2010-08-07 22:33+0200\n"
+"PO-Revision-Date: 2010-08-07 22:34+0200\n"
 "Last-Translator: Burak Yavuz <hitowerdigit@hotmail.com>\n"
 "Language-Team: turkish <tr@li.org>\n"
 "Language: tr\n"
@@ -6742,7 +6742,7 @@ msgstr "Dışarı aktarma seçeneklerini özelleştir"
 
 #: setup/lib/messages.inc.php:135
 msgid "Customize import defaults"
-msgstr "İçeri aktarma varsayılanlarını özelleştir"
+msgstr "İçe aktarma varsayılanlarını özelleştir"
 
 #: setup/lib/messages.inc.php:136
 msgid "Customize navigation frame"
