--- a/po/tr.po
+++ b/po/tr.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-07-31 14:12-0400\n"
-"PO-Revision-Date: 2010-08-07 22:34+0200\n"
+"PO-Revision-Date: 2010-08-07 22:44+0200\n"
 "Last-Translator: Burak Yavuz <hitowerdigit@hotmail.com>\n"
 "Language-Team: turkish <tr@li.org>\n"
 "Language: tr\n"
@@ -6836,8 +6836,8 @@ msgid ""
 "This might be good way to import large files, however it can break "
 "transactions."
 msgstr ""
-"İçeri aktarmayı yarıda kesmeye izin verildiği takdirde betik, kapatma zaman "
-"sınırını saptar. Bu büyük dosyaları içeri aktarmak için iyi bir yol "
+"Betiğin zaman sınırına yaklaşıldığını algılaması durumunda içe aktarımı "
+"kesmeye izin verir. Bu büyük dosyaları içe aktarmak için iyi bir yol "
 "olabilir, ancak bu işlemleri bozabilir."
 
 #: setup/lib/messages.inc.php:155
