--- a/po/tr.po
+++ b/po/tr.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-07-31 14:12-0400\n"
-"PO-Revision-Date: 2010-08-07 22:44+0200\n"
+"PO-Revision-Date: 2010-08-07 22:45+0200\n"
 "Last-Translator: Burak Yavuz <hitowerdigit@hotmail.com>\n"
 "Language-Team: turkish <tr@li.org>\n"
 "Language: tr\n"
@@ -6842,7 +6842,7 @@ msgstr ""
 
 #: setup/lib/messages.inc.php:155
 msgid "Partial import: allow interrupt"
-msgstr "Kısmi içeri aktarma: yarıda kesmeye izin ver"
+msgstr "Kısmi içe aktarma: yarıda kesmeye izin ver"
 
 #: setup/lib/messages.inc.php:156
 msgid ""
